frontend/test/should_fail/index_asArrayDescending_return_value_mismatch.grg
#using "index_where_non_index_expected_model.gm"

function f(ref s:array<Edge>) : int
{
	return(s.size());
}

rule i {
	if{ f(nodesFromIndexAsArrayDescending(fooi)) > 0; }
	
	modify {
	}
}
